# beginner_tutorials

./: CMakeLists.txt  README.md  package.xml
include/: first_astronaut.hpp  listener.hpp  second_astronaut.hpp  talker.hpp
launch/: launch.py
results/: cppcheck_result.txt  cpplint_result.txt  first_astronaut_output.txt  listener_output.txt  second_astronaut_output.txt  talker_output.txt
results/frames/: frames_2023-11-22_04.19.00.gv  tf_echo_output.txt
results/output_bag/: metadata.yaml  output_bag_0.db3
results/terminal_outputs/: combined_terminal_output.txt
src/: first_astronaut.cpp  listener.cpp  main.cpp  second_astronaut.cpp  talker.cpp
test/: test.cpp
